--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -12,7 +12,7 @@ msgstr ""
 "Project-Id-Version: icewm 1.2.30\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
 "POT-Creation-Date: 2017-12-10 17:58+0100\n"
-"PO-Revision-Date: 2017-12-14 10:01+0000\n"
+"PO-Revision-Date: 2017-12-13 12:01+0000\n"
 "Last-Translator: Wnereiz Z <wnereiz@eienteiland.org>\n"
 "Language-Team: Chinese (China) "
 "<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/zh_CN/>\n"
@@ -53,7 +53,7 @@ msgstr ""
 "intr = %llu, softirq = %llu, steal = %llu\n"
 
 #: src/acpustatus.cc:201
-#, c-format
+#, c-format, fuzzy
 msgid ""
 "bars:\tuser = %llu, nice = %llu, sys = %llu, iowait = %llu, intr = %llu, "
 "softirq = %llu, steal = %llu (h = %i)\n"
@@ -62,9 +62,9 @@ msgstr ""
 "softirq = %llu, steal = %llu (h = %i)\n"
 
 #: src/acpustatus.cc:261
-#, c-format
+#, fuzzy, c-format
 msgid "CPU %s Load: %3.2f %3.2f %3.2f, %u"
-msgstr "CPU %s 负载： %3.2f %3.2f %3.2f, %u"
+msgstr "CPU 负载： %3.2f %3.2f %3.2f, %u"
 
 #: src/acpustatus.cc:266
 #, c-format
@@ -152,15 +152,15 @@ msgstr "%ld 封邮件。"
 
 #: src/amemstatus.cc:127
 msgid "GB"
-msgstr "GB"
+msgstr ""
 
 #: src/amemstatus.cc:131
 msgid "MB"
-msgstr "MB"
+msgstr ""
 
 #: src/amemstatus.cc:135
 msgid "kB"
-msgstr "kB"
+msgstr ""
 
 #: src/amemstatus.cc:139
 msgid "bytes"
@@ -187,7 +187,7 @@ msgid "User: "
 msgstr "用户： "
 
 #: src/apppstatus.cc:198
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Interface %s:\n"
 "  Current rate (in/out):\t%li %s/%li %s\n"
@@ -262,6 +262,7 @@ msgid "System"
 msgstr "系统"
 
 #: src/fdomenu.cc:86
+#, fuzzy
 msgid "WINE"
 msgstr "WINE"
 
@@ -315,15 +316,15 @@ msgstr "Ctrl+Q"
 
 #: src/icehelp.cc:1216
 msgid "Icewm(1)"
-msgstr "Icewm(1)"
+msgstr ""
 
 #: src/icehelp.cc:1218
 msgid "Icewmbg(1)"
-msgstr "Icewmbg(1)"
+msgstr ""
 
 #: src/icehelp.cc:1220
 msgid "Icesound(1)"
-msgstr "Icesound(1)"
+msgstr ""
 
 #: src/icehelp.cc:1222
 msgid "FAQ"
@@ -338,6 +339,7 @@ msgid "Support"
 msgstr "支持"
 
 #: src/icehelp.cc:1228
+#, fuzzy
 msgid "Theme Howto"
 msgstr "主题帮助"
 
@@ -347,11 +349,12 @@ msgstr "网站"
 
 #: src/icehelp.cc:1232
 msgid "Github"
-msgstr "Github"
+msgstr ""
 
 #: src/icehelp.cc:1934
+#, fuzzy
 msgid "Unsupported protocol."
-msgstr "不支持的协议。"
+msgstr "不支持的协议：%s。"
 
 #: src/icehelp.cc:1959
 #, c-format
@@ -367,8 +370,9 @@ msgid "Failed to open file for reading."
 msgstr "读取文件失败。"
 
 #: src/icehelp.cc:2016
+#, fuzzy
 msgid "Failed to create a temporary file"
-msgstr "创建临时文件失败"
+msgstr "创建子进程失败: %s"
 
 #: src/icehelp.cc:2108
 #, c-format
@@ -376,9 +380,9 @@ msgid "Failed to execute system(%s) (%d)"
 msgstr "执行系统 (%s) (%d) 失败"
 
 #: src/icehelp.cc:2131
-#, c-format
+#, fuzzy, c-format
 msgid "Failed to decompress %s"
-msgstr "解压缩 %s 失败"
+msgstr "打开 %s 失败: %s"
 
 #: src/icehelp.cc:2139
 msgid "Could not locate curl or wget in PATH"
@@ -389,7 +393,7 @@ msgid "Unsafe characters in URL"
 msgstr "URL 包含不安全的字符"
 
 #: src/icehelp.cc:2180
-#, c-format
+#, c-format, fuzzy
 msgid ""
 "Usage: %s [OPTIONS] [ FILENAME | URL ]\n"
 "\n"
@@ -459,9 +463,9 @@ msgstr ""
 "\n"
 
 #: src/icehelp.cc:2257
-#, c-format
+#, fuzzy, c-format
 msgid "Ignoring option '%s'"
-msgstr "忽略选项 '%s'"
+msgstr "未知的行为：`%s'"
 
 #: src/icelist.cc:80
 msgid "List View"
@@ -524,9 +528,9 @@ msgid "Invalid workspace name: `%s'"
 msgstr "无效的工作区名: `%s'"
 
 #: src/icesh.cc:434
-#, c-format
+#, fuzzy, c-format
 msgid "Workspace out of range: %ld"
-msgstr "工作区超出了范围：%ld"
+msgstr "工作区超出了范围：%d"
 
 #: src/icesh.cc:568
 #, c-format
@@ -668,6 +672,7 @@ msgid "Socket error: %d"
 msgstr "socket 错误：%d"
 
 #: src/icesm.cc:56
+#, fuzzy
 msgid ""
 "  -c, --config=FILE   Let IceWM load preferences from FILE.\n"
 "  -t, --theme=FILE    Let IceWM load the theme from FILE.\n"
@@ -688,9 +693,9 @@ msgstr ""
 "  -s, --sound         同时启动 icesound。\n"
 
 #: src/icesm.cc:113
-#, c-format
+#, fuzzy, c-format
 msgid "Unknown option '%s'"
-msgstr "未知选项：`%s'"
+msgstr "未知的行为：`%s'"
 
 #: src/icesm.cc:298
 #, c-format
@@ -730,13 +735,14 @@ msgid "OSS incomplete write (%d/%d)"
 msgstr "OSS 写入未完成 (%d/%d)"
 
 #: src/icesound.cc:369
+#, fuzzy
 msgid "Could not post OSS"
-msgstr "无法发布 OSS"
+msgstr "不能装载字体“%s”。"
 
 #: src/icesound.cc:398
-#, c-format
+#, fuzzy, c-format
 msgid "Could not open OSS device %s"
-msgstr "无法打开 OSS 设备 %s"
+msgstr "找不到位图 %s"
 
 #: src/icesound.cc:403
 msgid "Could not set OSS stereo"
@@ -770,9 +776,9 @@ msgid "Sample <%d> uploaded as `%s:%s'"
 msgstr "以 <%d> %s：%s 上载例子"
 
 #: src/icesound.cc:569
-#, c-format
+#, fuzzy, c-format
 msgid "Playing sample #%d: %d"
-msgstr "播放例子 #%d: %d"
+msgstr "播放例子 #%d"
 
 #: src/icesound.cc:644
 #, c-format
@@ -794,7 +800,7 @@ msgid "Unrecognized argument: %s\n"
 msgstr "不明参数：%s\n"
 
 #: src/icesound.cc:829
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Usage: %s [OPTION]...\n"
 "\n"
@@ -849,42 +855,31 @@ msgid ""
 msgstr ""
 "用法： %s [选项]...\n"
 "\n"
-"发生 GUI 事件时 IceWM 播放声音文件。\n"
-"当前配置的声音界面为：%s 2。\n"
-"Icesound 将选择其中第一个可用的。\n"
+"发生GUI事件时 IceWM 播放声音文件。\n"
 "\n"
 "选项：\n"
 "\n"
-"-d, --display=DISPLAY         IceWM 使用的 X11 显示终端 (默认： $DISPLAY).\n"
+"-d, --display=DISPLAY         IceWM 使用的 Display (缺省： $DISPLAY).\n"
+"-s, --sample-dir=DIR          指定包含声音文件的目录 (如\n"
+"                              ~/.icewm/sounds). \n"
+"-i, --interface=TARGET        指定声音输出的目标接口, ALSA, OSS,\n"
+"                              YIFF, ESD中的一个 \n"
+"-D, --device=DEVICE           (ALSA OSS) 指定数字信号处理器\n"
+"                              (缺省为 (ALSA) default (OSS) /dev/dsp)。 \n"
+"-S, --server=ADDR:PORT        (ESD 和 YIFF) 指定服务器地址和\n"
+"                              端口 (缺省： ESD：localhost:16001\n"
+"                              ，YIFF：localhost:9433).\n"
+"-m, --audio-mode[=MODE]       (YIFF only) 指定音频模式\n"
+"                              (去获取一个列表)。\n"
+"--audio-mode-auto             (YIFF only) 改变音频模式使即时与例\n"
+"                              子的音频匹配到最好（可能与其它\n"
+"                               Y 客户引起问题， overrides\n"
+"                              --audio-mode).\n"
 "\n"
-"-s, --sample-dir=DIR          指定包含声音文件的目录。默认为 $HOME/.config/icewm/sounds。\n"
-"\n"
-"-i, --interface=LIST        指定音频输出的目标界面，%s 中的一个或多个，由逗号分割。\n"
-"\n"
-"-D, --device=DEVICE           仅用作向回兼容：默认设备。请参考 -A/-O/-S 选项其中之一。\n"
-"\n"
-" -O --oss=DEVIDE         指定 OSS 设备 （默认：\"%s 4\"）。\n"
-"\n"
-" -A, --alsa=DEVICE       指定 ALSA 设备 （默认：\"%s 5\"）。Specifies the ALSA device "
-"(default: \"%s 5\").\n"
-"\n"
-" -S, --server=ADDR:PORT  指定 ESD 服务器地址和端口号。对于 ESD 默认为 \"localhost:16001\"。\n"
-"\n"
-" -z, --snooze=millisecs  以毫秒为单位，指定声音事件之间的静音间隔。默认为 500 毫秒。\n"
-"\n"
-"-p, --play=sound        播放给出的声音文件（名称或号码）并退出。\n"
-"\n"
-" -l, --list-files        列出可用的声音文件路径并退出。\n"
-"\n"
-"     --list-sounds       列出支持的声音文件名并退出。\n"
-"\n"
-"     --list-interfaces   列出支持的音频界面并退出。\n"
-"\n"
-" -v, --verbose           打印每个声音事件的详细输出信息。\n"
-"\n"
-" -V, --version           打印版本信息并退出。\n"
-"\n"
-" -h, --help              打印此帮助屏幕并退出。\n"
+"-v, --verbose                 详细情况 (打印每一个声音事件到\n"
+"                              标准输出)。\n"
+"-V, --version                 打印版本信息并退出。\n"
+"-h, --help                    打印（这个）帮助屏幕并退出。\n"
 "\n"
 "返回值：\n"
 "\n"
@@ -934,16 +929,17 @@ msgid "Using %s audio."
 msgstr "使用 %s 音频。"
 
 #: src/icesound.cc:1079
-#, c-format
+#, fuzzy, c-format
 msgid "Failed to connect to audio interfaces %s."
-msgstr "连接音频界面 %s 失败。"
+msgstr "打开 %s 失败: %s"
 
 #: src/icesound.cc:1091
-#, c-format
+#, fuzzy, c-format
 msgid "Received signal %s: Terminating..."
-msgstr "收到信号 %s：终止..."
+msgstr "收到信号 %d：终止..."
 
 #: src/icetray.cc:246
+#, fuzzy
 msgid ""
 "  -n, --notify        Notify parent process by sending signal USR1.\n"
 "  --display=NAME      Use NAME to connect to the X server.\n"
@@ -984,11 +980,12 @@ msgid "Ctrl+W"
 msgstr "Ctrl+W"
 
 #: src/icewmbg.cc:73
-#, c-format
+#, fuzzy, c-format
 msgid "Failed to load image '%s'."
-msgstr "加载图片 %s 失败。"
+msgstr "打开 %s 失败: %s"
 
 #: src/icewmbg.cc:697
+#, fuzzy
 msgid ""
 "Usage: icewmbg [OPTIONS]\n"
 "Where multiple values can be given they are separated by commas.\n"
@@ -1034,49 +1031,16 @@ msgid ""
 " center:0 scaled:1 = fill both dimensions and keep aspect ratio\n"
 "\n"
 msgstr ""
-"使用方法： icewmbg [ 选项 ]\n"
-"多个值之间使用逗号分割。\n"
-"当 image 是目录时，则其下所有的图片都会被使用。\n"
-"\n"
-"选项：\n"
-"  -p, --replace        替换当前的 icewmbg。\n"
-"  -q, --quit           通知运行中的 icewmbg 退出。\n"
-"  -r, --restart        通知运行中的 icewmbg 重新启动。\n"
-"\n"
-"  -c, --config=FILE    从 FILE 中加载配置选项。\n"
-"  -t, --theme=NAME     加载名称为 NAME 的主题。\n"
-"\n"
-"  -i, --image=FILE(S)  从 FILE(S) 中加载背景图片。\n"
-"  -k, --color=NAME(S)  使用 NAME(S) 定义的背景颜色。\n"
-"\n"
-"  -s, --semis=FILE(S)  从 FILE(S) 中加载透明图片。\n"
-"  -x, --trans=NAME(S)  使用 NAME(S) 定义的透明度。\n"
-"\n"
-"  -e, --center=0/1     禁用/启用居中背景。\n"
-"  -a, --scaled=0/1     禁用/启用缩放背景。\n"
-"  -m, --multi=0/1      禁用/启用多头显示背景。\n"
-"\n"
-"  --display=NAME       使用 NAME 连接 X 服务器。\n"
-"  --sync               与 X11 服务器同步通信信息。\n"
-"\n"
-"  -h, --help           打印此帮助屏幕并退出。\n"
-"  -V, --version        打印版本信息并退出。\n"
-"\n"
-"依照配置文件加载桌面背景：\n"
-" DesktopBackgroundCenter  - 居中显示桌面背景\n"
-" DesktopBackgroundScaled  - 缩放显示桌面背景\n"
+"用法: icewmbg [ -r | -q ]\n"
+" -r 重启 icewmbg\n"
+" -q 退出 icewmbg\n"
+"依照配置文件加载桌面背景\n"
+" DesktopBackgroundCenter  - 居中显示桌面背景，不平铺\n"
+" SupportSemitransparency  - 支持半透明终端\n"
 " DesktopBackgroundColor   - 桌面背景颜色\n"
 " DesktopBackgroundImage   - 桌面背景图片\n"
-" SupportSemitransparency  - 支持半透明终端\n"
-" DesktopTransparencyColor - 半透明窗口背景色\n"
-" DesktopTransparencyImage - 半透明窗口背景图片\n"
-" DesktopBackgroundMultihead - 横跨所有显示器使用同一个背景\n"
-"\n"
-" center:0 scaled:0 = 平铺\n"
-" center:1 scaled:0 = 居中\n"
-" center:1 scaled:1 = 单方向填充并保持缩放比率不变\n"
-" center:0 scaled:1 = 双方向填充并保持缩放比率不变\n"
-"\n"
+" DesktopTransparencyColor - 半透明窗口使用的颜色\n"
+" DesktopTransparencyImage - 半透明窗口使用的图片\n"
 
 #: src/icewmbg.cc:744
 msgid "Please note that not all options are currently configured.\n"
@@ -1100,7 +1064,7 @@ msgid "Warning: "
 msgstr "警告： "
 
 #: src/misc.cc:641
-#, c-format
+#, c-format, fuzzy
 msgid ""
 "Usage: %s [OPTIONS]\n"
 "Options:\n"
@@ -1156,13 +1120,14 @@ msgid "icewm - About"
 msgstr "icewm - 关于"
 
 #: src/wmapp.cc:105
+#, fuzzy
 msgid "A window manager is already running, use --replace to replace it"
-msgstr "窗口管理器已经在运行，使用 --replace 参数进行替换"
+msgstr "另外的 窗口管理器 已经在运行，退出..."
 
 #: src/wmapp.cc:123
 #, c-format
 msgid "Failed to become the owner of the %s selection"
-msgstr "成为 %s 选项所有者失败"
+msgstr ""
 
 #: src/wmapp.cc:127
 msgid "Waiting to replace the old window manager"
@@ -1202,7 +1167,7 @@ msgstr "关机(_D)"
 
 #: src/wmapp.cc:537 src/wmdialog.cc:88
 msgid "_Suspend"
-msgstr "暂停(_S)"
+msgstr ""
 
 #: src/wmapp.cc:542
 msgid "Restart _Icewm"
@@ -1357,7 +1322,7 @@ msgstr ""
 "  --postpreferences   所有处理过程结束后打印配置选项。\n"
 
 #: src/wmapp.cc:1341
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
 "Starts the IceWM window manager.\n"
@@ -1387,33 +1352,28 @@ msgid ""
 "%s\n"
 "\n"
 msgstr ""
-"使用方法：%s [选项]\n"
+"用法: %s [选项]\n"
 "启动 IceWM 窗口管理器。\n"
 "\n"
-"选项：\n"
-"  --display=NAME      使用 NAME 作为 X 服务器名称。\n"
+"选项:\n"
+"  --display=NAME      使用的 X 服务器名。\n"
 "%s  --sync              同步 X11 命令。\n"
-"%s\n"
-"  -V, --version       打印版本信息并退出。\n"
-"  -h, --help          打印此使用方法屏幕并退出。\n"
-"%s\n"
-"  --replace           替换已有的窗口管理器。\n"
-"  -r, --restart       通知运行中的 icewm 重新启动。\n"
 "\n"
-"  --configured        打印编译时间配置项。\n"
-"  --directories       打印配置目录。\n"
-"  -l, --list-themes   打印所有可使用主题的列表。\n"
+"  -c, --config=FILE   从 FILE 加载配置。\n"
+"  -t, --theme=FILE    从 FILE 加载主题。\n"
+"  -n, --no-configure  忽略配置文件。\n"
 "\n"
-"环境变量：\n"
-"  ICEWM_PRIVCFG=PATH  用户配置文件目录，\n"
-"                      如存在，为 \"$XDG_CONFIG_HOME/icewm\"，\n"
-"                      或缺省为 \"$HOME/.icewm\"。\n"
-"  DISPLAY=NAME        所使用的 X 服务器名称。\n"
-"  MAIL=URL            你的邮箱位置。\n"
+"  -v, --version       显示版本信息并退出。\n"
+"  -h, --help          显示帮助信息并退出。\n"
+"%s  --replace           取代当前的窗口管理器。\n"
+"  --restart           不要使用: 这是一个内部标志。\n"
 "\n"
-"报告缺陷、支持请求和发表评论请访问：\n"
-"%s 5\n"
+"环境变量:\n"
+"  ICEWM_PRIVCFG=PATH  用户配置文件目录，缺省为\"$HOME/.icewm/\"\n"
+"  DISPLAY=NAME        使用的 X 服务器名，缺省依赖于 Xlib。\n"
+"  MAIL=URL            邮箱位置，如果忽略协议，则使用缺省的\"file\"协议。\n"
 "\n"
+"访问 http://www.icewm.org/ 来报告错误，支持请求，评论...  \n"
 
 #: src/wmapp.cc:1402
 #, c-format
@@ -1421,14 +1381,14 @@ msgid "%s configuration directories:\n"
 msgstr "%s 配置选项目录：\n"
 
 #: src/wmapp.cc:1478
-#, c-format
+#, fuzzy, c-format
 msgid "%s configured options:%s\n"
-msgstr "%s 配置的选项：%s\n"
+msgstr "不明选项：%s\n"
 
 #: src/wmapp.cc:1525
-#, c-format
+#, fuzzy, c-format
 msgid "Unrecognized option '%s'."
-msgstr "无法识别的选项：'%s'。"
+msgstr "不明选项：%s\n"
 
 #: src/wmapp.cc:1556
 msgid "Confirm Logout"
@@ -1443,21 +1403,19 @@ msgstr ""
 "继续吗？"
 
 #: src/wmconfig.cc:39
-#, c-format
+#, fuzzy, c-format
 msgid "Failed to load theme %s"
-msgstr "加载主题 %s 失败"
+msgstr "打开 %s 失败: %s"
 
 #: src/wmconfig.cc:102
-#, c-format
+#, fuzzy, c-format
 msgid "Unknown value '%s' for option '%s'."
-msgstr ""
-"Unknown value '%s' for option '%s'.\n"
-"选项 '%2$s' 中的值 '%1$s' 未知。"
+msgstr "未知的行为：`%s'"
 
 #: src/wmconfig.cc:110
-#, c-format
+#, fuzzy, c-format
 msgid "Unable to create directory %s"
-msgstr "无法创建目录 %s"
+msgstr "创建子进程失败: %s"
 
 #: src/wmconfig.cc:137
 #, c-format
@@ -1465,9 +1423,9 @@ msgid "Unable to write to %s"
 msgstr "无法写入 %s"
 
 #: src/wmconfig.cc:164
-#, c-format
+#, fuzzy, c-format
 msgid "Unable to rename %s to %s"
-msgstr "无法将 %s 重命名为 %s"
+msgstr "打开 %s 失败: %s"
 
 #: src/wmdialog.cc:87
 msgid "Loc_k Workstation"
@@ -1525,42 +1483,42 @@ msgid "Unknown window option: %s"
 msgstr "未知窗口选项：%s"
 
 #: src/wmoption.cc:333
-#, c-format
+#, fuzzy, c-format
 msgid "Syntax error in window options on line %d of %s"
-msgstr "%2$s 中第 %1$d 行的窗口选项语法错误"
+msgstr "窗口选项句法错误"
 
 #: src/wmprog.cc:183
 msgid "Missing command argument"
 msgstr "丢失命令参数"
 
 #: src/wmprog.cc:201
-#, c-format
+#, fuzzy, c-format
 msgid "Bad argument %d to command '%s'"
-msgstr "命令 '%2$s' 中的参数 '%1$d\" 无效"
+msgstr "传给 %s 的错误参数：%s"
 
 #: src/wmprog.cc:316
 msgid "Missing filename argument to include statement"
-msgstr "程序语句中缺少文件名参数"
+msgstr ""
 
 #: src/wmprog.cc:382
-#, c-format
+#, fuzzy, c-format
 msgid "Error at %s '%s'"
-msgstr "%s '%s' 错误"
+msgstr "键 %s 错误"
 
 #: src/wmprog.cc:429
-#, c-format
+#, fuzzy, c-format
 msgid "Unexepected menu keyword: '%s'"
-msgstr "无效的菜单关键字：'%s'"
+msgstr "未期望的关键词: %s"
 
 #: src/wmprog.cc:473
-#, c-format
+#, fuzzy, c-format
 msgid "Error at menuprog '%s'"
-msgstr "menuprog '%s' 发生错误"
+msgstr "程序 %s 错误"
 
 #: src/wmprog.cc:512
-#, c-format
+#, fuzzy, c-format
 msgid "Error at %s: '%s'"
-msgstr "%s: '%s' 错误"
+msgstr "键 %s 错误"
 
 #: src/wmprog.cc:535
 #, c-format
@@ -1584,27 +1542,29 @@ msgstr ""
 #: src/wmprog.cc:708
 #, c-format
 msgid "'%s' produces no output"
-msgstr "'%s' 产品无输出"
+msgstr ""
 
 #: src/wmprog.cc:856
 msgid "_Click to focus"
 msgstr "点击聚焦(_C)"
 
 #: src/wmprog.cc:857
+#, fuzzy
 msgid "_Explicit focus"
-msgstr "明确聚焦(_E)"
+msgstr "点击聚焦(_C)"
 
 #: src/wmprog.cc:858
 msgid "_Sloppy mouse focus"
-msgstr "粗略的鼠标焦点(_S)"
+msgstr ""
 
 #: src/wmprog.cc:859
+#, fuzzy
 msgid "S_trict mouse focus"
-msgstr "精确点击聚焦(_S)"
+msgstr "点击聚焦(_C)"
 
 #: src/wmprog.cc:860
 msgid "_Quiet sloppy focus"
-msgstr "静默的粗略聚焦(_Q)"
+msgstr ""
 
 #: src/wmprog.cc:861
 msgid "Custo_m"
@@ -1612,19 +1572,19 @@ msgstr "自定义(_m)"
 
 #: src/wmprog.cc:883
 msgid "_Manual"
-msgstr "手册(_M)"
+msgstr ""
 
 #: src/wmprog.cc:884
 msgid "_Icewm(1)"
-msgstr "_Icewm(1)"
+msgstr ""
 
 #: src/wmprog.cc:885
 msgid "Icewm_Bg(1)"
-msgstr "Icewm_Bg(1)"
+msgstr ""
 
 #: src/wmprog.cc:886
 msgid "Ice_Sound(1)"
-msgstr "Ice_Sound(1)"
+msgstr ""
 
 #: src/wmprog.cc:948
 msgid "Programs"
@@ -1632,7 +1592,7 @@ msgstr "程序"
 
 #: src/wmprog.cc:953
 msgid "_Run..."
-msgstr "运行(_R)…"
+msgstr "运行…(_R)"
 
 #: src/wmprog.cc:958 src/wmtaskbar.cc:277
 msgid "_Windows"
@@ -1763,7 +1723,7 @@ msgstr "%lu. 工作区 %-.32s"
 #: src/yapp.cc:276
 #, c-format
 msgid "%s: select failed"
-msgstr "%s：选择失败"
+msgstr ""
 
 #: src/yconfig.cc:139
 #, c-format
@@ -1811,9 +1771,9 @@ msgid "BUG? Unexpected end of XPM file but Imlib was able to parse \"%s\""
 msgstr "BUG？XPM文件有非预期的结束，但是Imlib却可以分析“%s”"
 
 #: src/ycursor.cc:218
-#, c-format
+#, fuzzy, c-format
 msgid "BUG? Unexpected character but Imlib was able to parse \"%s\""
-msgstr "BUG？非预期的特征，但是 Imlib 能够解析“%s”"
+msgstr "BUG？非预期的特征，但Imlib却可以分析“%s”"
 
 #: src/yfontcore.cc:71 src/yfontxft.cc:176
 #, c-format
@@ -1850,7 +1810,7 @@ msgstr "Ctrl+C"
 
 #: src/yinput.cc:36
 msgid "Cu_t"
-msgstr "剪切(_t)"
+msgstr "剪切(_T)"
 
 #: src/yinput.cc:36
 msgid "Ctrl+X"
@@ -1869,8 +1829,9 @@ msgid "Paste _Selection"
 msgstr "选择粘贴(_S)"
 
 #: src/yinput.cc:40
+#, fuzzy
 msgid "Ctrl+P"
-msgstr "Ctrl+P"
+msgstr "Ctrl+Q"
 
 #: src/yinput.cc:43
 msgid "Select _All"
@@ -1881,8 +1842,9 @@ msgid "Ctrl+A"
 msgstr "Ctrl+A"
 
 #: src/ylocale.cc:46
+#, fuzzy
 msgid "Locale not supported by C library or Xlib. Falling back to 'C' locale'."
-msgstr "C运行库或 Xlib 不支持该 locale。使用缺省的 'C'  locale'。"
+msgstr "C运行库不支持该区域。使用缺省的 'C' 区域。"
 
 #: src/ylocale.cc:72
 msgid ""
@@ -1904,19 +1866,19 @@ msgid "_OK"
 msgstr "确定(_O)"
 
 #: src/ypaths.cc:95
-#, c-format
+#, fuzzy, c-format
 msgid "Out of memory for image %s"
-msgstr "用于加载图片 %s 的内存不足"
+msgstr "内存不足以加载位图 \"%s\""
 
 #: src/ypaths.cc:98
 #, c-format
 msgid "Image not readable: %s"
-msgstr "无法读取图片：%s"
+msgstr ""
 
 #: src/ypaths.cc:121
-#, c-format
+#, fuzzy, c-format
 msgid "Could not find image %s"
-msgstr "无法找到图片 %s"
+msgstr "找不到位图 %s"
 
 #: src/ysmapp.cc:98
 msgid "$USER or $LOGNAME not set?"
@@ -1937,8 +1899,6 @@ msgid ""
 "  -d, --display=NAME  NAME of the X server to use.\n"
 "  --sync              Synchronize X11 commands.\n"
 msgstr ""
-"  -d, --display=NAME  使用的 X 服务器名称。\n"
-"  --sync              同步 X11 命令。\n"
 
 #~ msgid "Out of memory for window options"
 #~ msgstr "窗口选项内存不足"
