--- a/po/ru.po
+++ b/po/ru.po
@@ -15,8 +15,8 @@ msgstr ""
 "Project-Id-Version: IceWM 1.4.2\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
 "POT-Creation-Date: 2017-12-16 04:21+0100\n"
-"PO-Revision-Date: 2017-03-15 18:27+0000\n"
-"Last-Translator: Eduard Bloch <edi@gmx.de>\n"
+"PO-Revision-Date: 2017-12-18 3:40+0000\n"
+"Last-Translator: Alexandr Proklov <ssaa@rambler.ru>\n"
 "Language-Team: Russian <https://l10n.opensuse.org/projects/icewm/icewm-1-3-"
 "branch/ru/>\n"
 "Language: ru\n"
@@ -66,7 +66,7 @@ msgstr ""
 #: src/acpustatus.cc:261
 #, c-format
 msgid "CPU %s Load: %3.2f %3.2f %3.2f, %u"
-msgstr "Загрузка %s ЦП: %3.2f %3.2f %3.2f, %u"
+msgstr "Загрузка %s CPU: %3.2f %3.2f %3.2f, %u"
 
 #: src/acpustatus.cc:266
 #, c-format
@@ -84,7 +84,7 @@ msgid ""
 "Swap (free): %.2f (%.2f) M"
 msgstr ""
 "\n"
-"Подкачка (свободно): %.2f (%.2f) МБ"
+"Swap (свободно): %.2f (%.2f) МБ"
 
 #: src/acpustatus.cc:277
 #, c-format
@@ -102,15 +102,15 @@ msgid ""
 "CPU Freq: %.3fGHz"
 msgstr ""
 "\n"
-"Такт ЦП: %.3fГГц"
+"Частота CPU: %.3fГГц"
 
 #: src/acpustatus.cc:317
 msgid "CPU"
-msgstr "Загрузка"
+msgstr "CPU"
 
 #: src/acpustatus.cc:317
 msgid "Load: "
-msgstr "ЦП: "
+msgstr "Загрузка: "
 
 #. TRANSLATORS: Please translate the string "C" into "Celsius Temperature" in your language.
 #. TRANSLATORS: Please make sure the translated string could be shown in your non-utf8 locale.
@@ -166,11 +166,11 @@ msgstr "КБ"
 
 #: src/amemstatus.cc:139
 msgid "bytes"
-msgstr "байтов"
+msgstr "байт"
 
 #: src/amemstatus.cc:163
 msgid "Memory Total: "
-msgstr "Сумма Памяти: "
+msgstr "Всего Памяти: "
 
 #: src/amemstatus.cc:164
 msgid "Free: "
@@ -178,15 +178,15 @@ msgstr "Свободно: "
 
 #: src/amemstatus.cc:165
 msgid "Cached: "
-msgstr ""
+msgstr "Кешировано: "
 
 #: src/amemstatus.cc:166
 msgid "Buffers: "
-msgstr ""
+msgstr "Буферы: "
 
 #: src/amemstatus.cc:167
 msgid "User: "
-msgstr "Пользователь"
+msgstr "Пользователь: "
 
 #: src/apppstatus.cc:198
 #, c-format
@@ -200,8 +200,8 @@ msgstr ""
 "Интерфейс %s:\n"
 "  Текущая скорость (ввод/вывод):\t%li %s/%li %s\n"
 "  Средняя скорость (ввод/вывод):\t%lli %s/%lli %s\n"
-"  Переслано данных (ввод/вывод):\t%lli %s/%lli %s\n"
-"  Время на линии:\t%ld:%02ld:%02ld%s%s"
+"  Передано данных (ввод/вывод):\t%lli %s/%lli %s\n"
+"  Время работы:\t%ld:%02ld:%02ld%s%s"
 
 #: src/apppstatus.cc:210
 msgid ""
@@ -364,11 +364,11 @@ msgstr "Неправильный путь: %s\n"
 
 #: src/icehelp.cc:1982
 msgid "Path does not refer to a file."
-msgstr ""
+msgstr "Путь не указывает на файл"
 
 #: src/icehelp.cc:1987
 msgid "Failed to open file for reading."
-msgstr ""
+msgstr "Не удалось открыть файл для чтения."
 
 #: src/icehelp.cc:2016
 msgid "Failed to create a temporary file"
@@ -429,6 +429,39 @@ msgid ""
 "%s\n"
 "\n"
 msgstr ""
+"Использование: %s [OPTIONS] [ FILENAME | URL ]\n"
+"\n"
+"IceHelp это упрощенный HTML браузер для оконного окружения IceWM.\n"
+"Он может показывать HTML файлы, или WEB-сайты.\n"
+"Посещенные страницы запоминаются в списке истории, которая доступна\n"
+"через горячие клавиши и через контекстное меню (правая кнопка мыши).\n"
+"Показ изображений и JavaScript не поддерживается.\n"
+"Если не указан файл или URL - будет показана Справка IceWM\n"
+"из %s.\n"
+"\n"
+"Параметры:\n"
+"  -d, --display=NAME  NAME of the X server to use.\n"
+"  --sync              Synchronize X11 commands.\n"
+"\n"
+"  -B                  Показать IceWM icewmbg manpage.\n"
+"  -b, --bugs          Показать IceWM bug reports (упрощенно).\n"
+"  -f, --faq           Показать IceWM FAQ and Howto.\n"
+"  -g                  Показать IceWM Github website.\n"
+"  -i, --icewm         Показать IceWM icewm manpage.\n"
+"  -m, --manual        Показать IceWM Manual (по умолчанию).\n"
+"  -s                  Показать IceWM icesound manpage.\n"
+"  -t, --theme         Показать IceWM themes Howto.\n"
+"  -w, --website       Показать IceWM website.\n"
+"\n"
+"  -V, --version       Показать версию программы и выйти.\n"
+"  -h, --help          Показать информацию по использованию и выйти.\n"
+"\n"
+"Переменные окружения:\n"
+"  DISPLAY=NAME        Name of the X server to use.\n"
+"\n"
+"Для отправки отчетов об ошибках, вопросов в техподдержку, коментариев, посетите:\n"
+"%s\n"
+"\n"
 
 #: src/icehelp.cc:2257
 #, c-format
