--- a/po/ru.po
+++ b/po/ru.po
@@ -429,7 +429,7 @@ msgid ""
 "%s\n"
 "\n"
 msgstr ""
-"Использование: %s [OPTIONS] [ FILENAME | URL ]\n"
+"Использование: %s [ПАРАМЕТР] [ FILENAME | URL ]\n"
 "\n"
 "IceHelp это упрощенный HTML браузер для оконного окружения IceWM.\n"
 "Он может показывать HTML файлы, или WEB-сайты.\n"
@@ -453,8 +453,8 @@ msgstr ""
 "  -t, --theme         Показать IceWM themes Howto.\n"
 "  -w, --website       Показать IceWM website.\n"
 "\n"
-"  -V, --version       Показать версию программы и выйти.\n"
-"  -h, --help          Показать информацию по использованию и выйти.\n"
+"  -V, --version       Показать информацию о версии и выйти.\n"
+"  -h, --help          Показать эту справку и выйти.\n"
 "\n"
 "Переменные окружения:\n"
 "  DISPLAY=NAME        Name of the X server to use.\n"
@@ -812,7 +812,7 @@ msgid ""
 "  3    Subsystems error (ie cannot connect to server).\n"
 "\n"
 msgstr ""
-"Использование: %s [OPTION]...\n"
+"Использование: %s [ПАРАМЕТРЫ]...\n"
 "\n"
 "Проигрывает аудио файлы по событиям из IceWM.\n"
 "Для вывода звука используется: %s.\n"
@@ -851,9 +851,9 @@ msgstr ""
 "\n"
 " -v, --verbose           Be verbose and print out each sound event.\n"
 "\n"
-" -V, --version           Показать версию программы и выйти.\n"
+" -V, --version           Показать информацию о версии и выйти.\n"
 "\n"
-" -h, --help              Показать информацию по использованию и выйти.\n"
+" -h, --help              Показать эту справку и выйти.\n"
 "\n"
 "Return values:\n"
 "\n"
@@ -995,7 +995,7 @@ msgid ""
 " center:0 scaled:1 = fill both dimensions and keep aspect ratio\n"
 "\n"
 msgstr ""
-"Использование: icewmbg [OPTIONS]\n"
+"Использование: icewmbg [ПАРАМЕТРЫ]\n"
 "При указании нескольких параметров, параметры разделяются пробелом.\n"
 "Если в --image указать каталог, будут использованы все изображения в каталоге.\n"
 "\n"
@@ -1020,8 +1020,8 @@ msgstr ""
 "  --display=NAME       Use NAME to connect to the X server.\n"
 "  --sync               Synchronize communication with X11 server.\n"
 "\n"
-"  -h, --help           Показать версию программы и выйти.\n"
-"  -V, --version        Показать информацию по использованию и выйти.\n"
+"  -h, --help           Показать информацию о версии и выйти.\n"
+"  -V, --version        Показать эту справку и выйти.\n"
 "\n"
 "Настройки фона рабочего стола в файле preferences (перекрываются из тем)\n"
 " DesktopBackgroundCenter  - Центрировать фон рабочего стола\n"
@@ -1066,9 +1066,9 @@ msgid ""
 "Usage: %s [OPTIONS]\n"
 "Options:\n"
 "%s\n"
-"  -C, --copying       Prints license information and exits.\n"
-"  -V, --version       Prints version information and exits.\n"
-"  -h, --help          Prints this usage screen and exits.\n"
+"  -C, --copying       Показать информацию о лицензии и выйти.\n"
+"  -V, --version       Показать информацию о версии и выйти.\n"
+"  -h, --help          Показать эту справку и выйти.\n"
 "\n"
 msgstr ""
 
@@ -1343,15 +1343,15 @@ msgid ""
 "%s\n"
 "\n"
 msgstr ""
-"Применение: %s [ОПЦИИ]\n"
+"Применение: %s [ПАРАМЕТРЫ]\n"
 "Запускает оконный менеджер IceWM.\n"
 "\n"
-"Опции:\n"
+"Параметры:\n"
 "  --display=ИМЯ       Имя используемого X-сервера.\n"
 "%s  --sync              Синхронизировать команды X11.\n"
 "%s\n"
-"  -V, --version       Напечатать информацию о версии и выйти.\n"
-"  -h, --help          Напечатать эту информацию о применении и выйти.\n"
+"  -V, --version       Показать информацию о версии и выйти.\n"
+"  -h, --help          Показать эту справку и выйти.\n"
 "%s\n"
 "  --replace           Заместить существующий оконный менеджер.\n"
 "  -r, --restart       Tell the running icewm to restart itself.\n"
@@ -1749,9 +1749,7 @@ msgstr "Ошибка загрузки картинки \"%s\""
 #: src/ycursor.cc:159
 #, c-format
 msgid "Invalid cursor pixmap: \"%s\" contains too much unique colors"
-msgstr ""
-"Неподходящая картинка для курсора: \"%s\" содержит слишком много разных "
-"цветов"
+msgstr "Неподходящая картинка для курсора: \"%s\" содержит слишком много цветов"
 
 #: src/ycursor.cc:181
 #, c-format
@@ -1842,7 +1840,7 @@ msgstr "Ctrl+A"
 #: src/ylocale.cc:46
 #, fuzzy
 msgid "Locale not supported by C library or Xlib. Falling back to 'C' locale'."
-msgstr "Локаль не поддерживается библиотекой C. Отхожу на локаль 'C'."
+msgstr "Локаль не поддерживается библиотекой C. Используется локаль 'C'."
 
 #: src/ylocale.cc:72
 msgid ""
