make html output better

--- a/man/icewm-menu.pod
+++ b/man/icewm-menu.pod
@@ -6,11 +6,19 @@
 
 =head1 SYNOPSIS
 
-F<> F<$ICEWM_PRIVCFG/menu>
- F<$XDG_CONFIG_HOME/icewm/menu>
- F<$HOME/.icewm/menu>
- F</etc/icewm/menu>
- F</usr/share/icewm/menu>
+=over
+
+=item F<$ICEWM_PRIVCFG/menu>
+
+=item F<$XDG_CONFIG_HOME/icewm/menu>
+
+=item F<$HOME/.icewm/menu>
+
+=item F</etc/icewm/menu>
+
+=item F</usr/share/icewm/menu>
+
+=back
 
 =head1 DESCRIPTION
 
