--- a/man/icewm-menu.pod
+++ b/man/icewm-menu.pod
@@ -26,10 +26,9 @@ The F<menu> file is responsible for configuring most of the L<icewm(1)>
 root menu and start menu.
 
 A menu of applications; usually customized by the user.  B<icewm>
-provides either the program L<icewm-menu-fdo(1)> or the program
-L<icewm-menu-gnome2(1)> to generate a default menu.  Similar programs
-are L<xdg_menu(1)>, L<mmaker(1)>' (MenuMaker), L<xde-menu(1)>,
-L<xdgmenumaker(1)>.
+provides the L<icewm-menu-fdo(1)> program to generate a default menu.
+Similar programs are L<xdg_menu(1)>, L<mmaker(1)>' (MenuMaker),
+L<xde-menu(1)>, L<xdgmenumaker(1)>.
 
 =head1 FORMAT
 
