--- a/man/icewm.pod
+++ b/man/icewm.pod
@@ -867,10 +867,9 @@ See L<icewm-keys(5)>.
 =item F<menu>
 
 A menu of applications; usually customized by the user.  B<icewm>
-provides either the program L<icewm-menu-fdo(1)> or the program
-L<icewm-menu-gnome2(1)> to generate a default menu.  Similar programs
-are L<xdg_menu(1)>, L<mmaker(1)>' (MenuMaker), L<xde-menu(1)>,
-L<xdgmenumaker(1)>.
+provides the L<icewm-menu-fdo(1)> program to generate a default menu.
+Similar programs are L<xdg_menu(1)>, L<mmaker(1)>' (MenuMaker),
+L<xde-menu(1)>, L<xdgmenumaker(1)>.
 
 See L<icewm-menu(5)>.
 
