--- a/po/it.po
+++ b/po/it.po
@@ -10,11 +10,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.31\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2017-12-28 11:44-0700\n"
-"PO-Revision-Date: 2018-01-16 11:03+0000\n"
+"POT-Creation-Date: 2018-01-16 16:49-0700\n"
+"PO-Revision-Date: 2018-01-15 18:02+0000\n"
 "Last-Translator: Alessio Adamo <alessio.adamo@gmail.com>\n"
-"Language-Team: Italian "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/it/>\n"
+"Language-Team: Italian <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/it/>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -393,7 +393,7 @@ msgid "Unsafe characters in URL"
 msgstr "Caratteri pericolosi nell'URL"
 
 #: src/icehelp.cc:2180
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Usage: %s [OPTIONS] [ FILENAME | URL ]\n"
 "\n"
@@ -823,7 +823,7 @@ msgid "Unrecognized argument: %s\n"
 msgstr "Argomento non riconosciuto: %s\n"
 
 #: src/icesound.cc:836
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Usage: %s [OPTION]...\n"
 "\n"
@@ -876,47 +876,36 @@ msgid ""
 "  3    Subsystems error (ie cannot connect to server).\n"
 "\n"
 msgstr ""
-"Options:\n"
+"Uso: %s [OPZIONE]...\n"
 "\n"
-" -d, --display=DISPLAY   Display X11 usato da IceWM (predefinito: $DISPLAY)."
+"Riproduce file audio in risposta agli eventi generati da IceWM.\n"
 "\n"
+"Opzioni:\n"
 "\n"
-" -s, --sample-dir=DIR    Specifica la directory che contiene i file sonori.\n"
-"                         Predefinito è $HOME/.config/icewm/sounds.\n"
+"-d, --display=DISPLAY         Display usato da IceWM (predefinito: "
+"$DISPLAY).\n"
+"-s, --sample-dir=DIRECTORY    Specifica la directory che contiene i file\n"
+"                              sonori (es. ~/.icewm/sounds).\n"
+"-i, --interface=TARGET        Specifica l'interfaccia sonora:\n"
+"                              scegliere tra ALSA, OSS, YIFF, ESD.\n"
+"-D, --device=DEVICE           (ALSA OSS) specifica il DSP da usare\n"
+"                              (predefinito: (ALSA) default (OSS) /dev/dsp).\n"
+"-S, --server=ADDR:PORT        (ESD e YIFF) specifica indirizzo e porta del "
+"server\n"
+"                              (predefinito localhost:16001 per ESD,\n"
+"                              o localhost:9433 per YIFF\n"
+"-m, --audio-mode[=MODO]       (solo YIFF) specifica la modalità audio\n"
+"                              (lasciare vuoto per ottenere una lista).\n"
+"--audio-mode-auto             (solo YIFF) cambia al volo la modalità\n"
+"                              audio per adattarsi a quella del campione\n"
+"                              (può causare problemi con altri client YIFF,\n"
+"                              ignora --audio-mode).\n"
 "\n"
-" -i, --interface=LIST    Specifica l'uscita audio. Una o più tra:\n"
-"                         %s separate da virgole.\n"
-"\n"
-" -D, --device=DEVICE     Per retrocompatibilità soltanto: il dispositivo\n"
-"                         predefinito. Preferire una delle opzioni -A/-O/-S.\n"
-"\n"
-" -O, --oss=DEVICE        Specifica il dispositivo OSS (predefinito: \"%s\")."
-"\n"
-"\n"
-" -A, --alsa=DEVICE       Specifica il dispositivo ALSA (predefinito: \"%s\")."
-"\n"
-"\n"
-" -S, --server=INDR:PORT  Specifica l'indirizzo e il numero di porta del\n"
-"                         server ESD. Per ESD predefiniti sono \"localhost:"
-"16001\".\n"
-"\n"
-" -z, --snooze=millisecs  Specifica l'intervallo di riposo tra eventi sonori\n"
-"                         in millisecondi. Predefinito è 500 millisecondi.\n"
-"\n"
-" -p, --play=sound        Riproduce il suono dato (nome o numero) ed esce.\n"
-"\n"
-" -l, --list-files        Elenca i percorsi di file sonori disponibili ed "
+"-v, --verbose                 Prolisso (stampa ogni evento sonoro su "
+"stdout).\n"
+"-V, --version                 Mostra le informazioni sulla versione ed "
 "esce.\n"
-"\n"
-"     --list-sounds       Elenca i nomi di file sonori supportati ed esce.\n"
-"\n"
-"     --list-interfaces   Elenca le interfacce audio disponibili ed esce.\n"
-"\n"
-"-v, --verbose            Prolisso, mostra a video ogni evento sonoro.\n"
-"\n"
-"-V, --version            Mostra le informazioni sulla versione ed esce.\n"
-"\n"
-"-h, --help               Mostra questo aiuto ed esce.\n"
+"-h, --help                    Mostra questo aiuto ed esce.\n"
 "\n"
 "Valori restituiti:\n"
 "\n"
@@ -1015,12 +1004,12 @@ msgstr "A capo automatico"
 msgid "Ctrl+W"
 msgstr "Ctrl+W"
 
-#: src/icewmbg.cc:73
+#: src/icewmbg.cc:77
 #, c-format
 msgid "Failed to load image '%s'."
 msgstr "Impossibile caricare l'immagine «%s»."
 
-#: src/icewmbg.cc:703
+#: src/icewmbg.cc:707
 #, fuzzy
 msgid ""
 "Usage: icewmbg [OPTIONS]\n"
@@ -1095,11 +1084,11 @@ msgstr ""
 " center:1 scaled:1 = mantiene le proporzioni\n"
 "\n"
 
-#: src/icewmbg.cc:750
+#: src/icewmbg.cc:754
 msgid "Please note that not all options are currently configured.\n"
 msgstr "Si noti che non tutte le opzioni sono attualmente configurate.\n"
 
-#: src/icewmbg.cc:896
+#: src/icewmbg.cc:900
 msgid "Cannot start, because another icewmbg is still running."
 msgstr ""
 "Impossibile avviare, perché un'altra istanza di icewmbg è ancora in "
@@ -1380,7 +1369,7 @@ msgstr ""
 "  --postpreferences   Visualizza le preferenze dopo l'elaborazione.\n"
 
 #: src/wmapp.cc:1349
-#, c-format
+#, fuzzy, c-format
 msgid ""
 "Usage: %s [OPTIONS]\n"
 "Starts the IceWM window manager.\n"
@@ -1411,32 +1400,34 @@ msgid ""
 "\n"
 msgstr ""
 "Uso: %s [OPZIONI]\n"
-"Avvia il gestore delle finestre IceWM.\n"
+"Avvia il window manager IceWM.\n"
 "\n"
 "Opzioni:\n"
-"  -d, --display=NOME  NOME del server X da usare.\n"
-"%s  --sync              Sincronizza i comandi X11.\n"
-"%s\n"
+"  --display=NOME      NOME del server X in uso.\n"
+"%s  --sync            Sincronizza i comandi X11.\n"
+"\n"
+"  -c, --config=FILE   Carica le preferenze da FILE.\n"
+"  -t, --theme=FILE    Carica il tema da FILE.\n"
+"\n"
 "  -V, --version       Mostra le informazioni sulla versione ed esce.\n"
 "  -h, --help          Mostra questa schermata d'uso ed esce.\n"
-"%s\n"
-"  --replace           Sostituisce un window manager esistente.\n"
-"  -r, --restart       Dice all'istanza in esecuzione di icewm di\n"
-"                      riavviarsi.\n"
-"\n"
-"  --configured        Mostra la configurazione al momento della\n"
-"                      compilazione.\n"
+"%s  --replace         Sostituisce un window manager esistente.\n"
+"  --restart           Non usare: è un'opzione interna.\n"
+"  --configured        Mostra la configurazione al momento della "
+"compilazione.\n"
 "  --directories       Mostra le directory di configurazione.\n"
 "  -l, --list-themes   Mostra un elenco di tutti i temi disponibili.\n"
+"  --postpreferences   Mostra le preferenze dopo tutte le elaborazioni.\n"
 "\n"
 "Variabili d'ambiente:\n"
-"  ICEWM_PRIVCFG=PATH  Directory per i file di configurazione,\n"
-"                      \"$XDG_CONFIG_HOME/icewm\" se esiste o\n"
-"                      \"$HOME/.icewm\" come predefinita.\n"
+"  XDG_CONFIG_HOME=PERCORSO  Directory per i file di configurazione,\n"
+"                      \"$HOME/.config/icewm/\" è quella predefinita.\n"
+"  ICEWM_PRIVCFG=PERCORSO  Directory per i file di configurazione utente,\n"
+"                      «$HOME/.icewm/» è quella predefinita.\n"
 "  DISPLAY=NOME        Nome del server X da usare.\n"
-"  MAIL=URL            Posizione della casella di posta.\n"
+"  MAIL=URL            Posizione della mailbox.\n"
 "\n"
-"Per segnalazione di errori, richieste di supporto, commenti visitare:\n"
+"Per riportare bug, richieste di supporto, commenti si prega di visitare:\n"
 "%s\n"
 "\n"
 
