--- a/po/es.po
+++ b/po/es.po
@@ -7,11 +7,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: IceWM 1.2.26\n"
 "Report-Msgid-Bugs-To: https://github.com/bbidulock/icewm/issues\n"
-"POT-Creation-Date: 2018-01-16 16:56-0700\n"
+"POT-Creation-Date: 2018-01-20 10:37-0700\n"
 "PO-Revision-Date: 2018-01-20 17:30+0000\n"
 "Last-Translator: jc sl <trcs@gmx.com>\n"
-"Language-Team: Spanish "
-"<https://l10n.opensuse.org/projects/icewm/icewm-1-4-branch/es/>\n"
+"Language-Team: Spanish <https://l10n.opensuse.org/projects/icewm/icewm-1-4-"
+"branch/es/>\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +50,8 @@ msgid ""
 "stat:\tuser = %llu, nice = %llu, sys = %llu, idle = %llu, iowait = %llu, "
 "intr = %llu, softirq = %llu, steal = %llu\n"
 msgstr ""
-"estadísticas:\tusuario = %llu, nice = %llu, sys = %llu, idle = %llu, iowait ="
-" %llu, intr = %llu, softirq = %llu, steal = %llu\n"
+"estadísticas:\tusuario = %llu, nice = %llu, sys = %llu, idle = %llu, iowait "
+"= %llu, intr = %llu, softirq = %llu, steal = %llu\n"
 
 #: src/acpustatus.cc:201
 #, c-format
@@ -59,8 +59,8 @@ msgid ""
 "bars:\tuser = %llu, nice = %llu, sys = %llu, iowait = %llu, intr = %llu, "
 "softirq = %llu, steal = %llu (h = %i)\n"
 msgstr ""
-"barras:\tusuario = %llu, nice = %llu, sys = %llu, iowait = %llu, intr = %"
-"llu, softirq = %llu, steal = %llu (h = %i)\n"
+"barras:\tusuario = %llu, nice = %llu, sys = %llu, iowait = %llu, intr = "
+"%llu, softirq = %llu, steal = %llu (h = %i)\n"
 
 #: src/acpustatus.cc:261
 #, c-format
